k8s/Traefik-Pihole/Manifest/PiHole/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    # - match: Host(`www.dns.devcraft.app`) # change to your domain
    #   kind: Rule
    #   services:
    #     - name: pihole
    #       port: 80
    - match: Host(`dns.devcraft.app`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: devcraft-tls # change to your cert name
